新增获取领域code
